FEs-355: AuthForm fix on Safari

--- a/src/components/AuthModal/AuthModal.less
+++ b/src/components/AuthModal/AuthModal.less
@@ -75,7 +75,6 @@
       text-align: center;
       font-size: 12px;
       color: var(--text-red);
-      line-height: 0px;
       letter-spacing: 0.4444px;
     }
 
